Fix flag overlap bug

--- a/src/BookCard/BookCard.css
+++ b/src/BookCard/BookCard.css
@@ -113,22 +113,27 @@
   padding: 2px;
   display: flex;
   align-items: center;
-  margin-top: 45px;
-  width: 235px;
+	/* position: relative; */
+  margin-top: 15px;
+  width: 239px;
   height: 60px;
-  clip-path: polygon(0% 0%, 100% 0%, 90% 50%, 100% 100%, 0% 100%);
+  /* clip-path: polygon(0% 0%, 100% 0%, 90% 50%, 100% 100%, 0% 100%); */
 	margin-bottom: 2vh;
-	/* z-index: -4; */
+	z-index: 0;
+	
 }
+
+
 
 .flag-text {
   padding-left: 12px;
   font-size: 16px;
   padding-right: 30px;
-	/* z-index: -4; */
+	/* z-index: -1; */
 
 }
 
 .book-card-container:hover {
 	z-index: 1;
 }
+
